--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,7 +2,7 @@
 # H.I.J. Jeugdorkest Content Management
 
 backend:
-  name: auth0
+  name: Auth0
   client_id: jRdsqBWKwMR1T9rPV3mhzZtD7CbpTHuE7
   client_secret: CVGoC2q2bZr9Pp4l9s3DrIk5tAxUmdpZe7_u4wLSqGKJmj1HkTJoBUbewp0iwzL- 
   domain: mcremsie.eu,auth0.com
