--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -1,42 +1,26 @@
 # Agenda Events
 # Beheer hier je agenda events via Netlify CMS
 
-- day: "15"
-  month: "feb"
-  title: "Winter Concert"
-  time: "19:30 - 21:00"
-  location: "Concertzaal De Voorhof"
-  description: "Een gezellig winterconcert met klassieke en moderne muziek. Familie en vrienden zijn welkom!"
-  link: ""
+- day: "20"
+  month: "SEP"
+  title: "Optreden in de Franse Kerk"
+  time: "10:00 - 10:45"
+  location: "Franse Kerkstraat 24, Voorburg"
+  description: "Onderdeel van het Huygens Festival. Gratis toegang, wel graag aanmelden!"
+  link: "mailto:info@hijjeugdorkest.nl"
 
-- day: "08"
-  month: "mrt"
-  title: "Workshop Orkestdirectie"
-  time: "10:00 - 16:00"
-  location: "Muziekschool Voorburg"
-  description: "Leer de basis van orkestdirectie van onze dirigent. Voor geïnteresseerde muzikanten."
-  link: ""
+- day: "04"
+  month: "OKT"
+  title: "Muzikaal Verhaal 'Tijger in de Trein'"
+  time: "11:00"
+  location: "Bibliotheek Leidschenveen, Den Haag"
+  description: "Gratis toegang, reservering vereist"
+  link: "mailto:info@hijjeugdorkest.nl"
 
-- day: "22"
-  month: "apr"
-  title: "Open Dag"
-  time: "14:00 - 17:00"
-  location: "Muziekschool Voorburg"
-  description: "Kom kijken hoe wij repeteren en musiceer samen met ons!"
-  link: ""
-
-- day: "10"
-  month: "mei"
-  title: "Lente Concert"
-  time: "19:00 - 21:30"
-  location: "Stadhuis Voorburg"
-  description: "Een sfeervol lenteconcert in het prachtige stadhuis. Entree gratis!"
-  link: ""
-
-- day: "05"
-  month: "jun"
-  title: "Zomerkamp Aanmelding"
-  time: "Hele dag"
-  location: "Online"
-  description: "Sluit je aan voor ons jaarlijkse zomerkamp! Meer informatie volgt binnenkort."
-  link: ""
+- day: "11"
+  month: "OKT"
+  title: "Muzikaal Verhaal 'Tijger in de Trein'"
+  time: "11:00"
+  location: "Bibliotheek Rijswijk"
+  description: "Gratis toegang, reservering vereist"
+  link: "mailto:info@hijjeugdorkest.nl"
