--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -1,26 +1,20 @@
 # FAQ Items
 # Veelgestelde vragen over H.I.J. Jeugdorkest
 
-- question: "Voor welke leeftijd is het orkest geschikt?"
-  answer: "Ons orkest is geschikt voor kinderen en jongeren tussen de 8 en 18 jaar. Er zijn geen strikte voorkennis-eisen - ook beginners zijn welkom!"
+- question: "Moet ik al goed kunnen spelen?"
+  answer: "Nee! Als je een paar jaar speelervaring hebt en enthousiast bent, ben je welkom. We leren allemaal van elkaar in een ontspannen sfeer."
 
-- question: "Welke instrumenten spelen jullie?"
-  answer: "We hebben een gevarieerde bezetting: violen, fluiten, klarinetten, saxofoons, trompetten, trombones, slagwerk en nog veel meer. Heb je een ander instrument? Laat het ons weten!"
+- question: "Wat kost lidmaatschap?"
+  answer: "De jaarlijkse contributie is €250. Dit dekt de kosten voor het gebruik van de oefenruimte en materialen."
 
-- question: "Hoe vaak repeteren jullie?"
-  answer: "We repeteren wekelijks op woensdagavond van 19:00 tot 21:00 uur in de Muziekschool Voorburg. Tijdens schoolvakanties is er meestal geen repetitie."
+- question: "Kan ik mijn eigen instrument meenemen?"
+  answer: "Ja, we verwachten dat je je eigen instrument en muziekstandaard meeneemt. Dit zorgt voor meer muziekplezier!"
 
-- question: "Heb ik voorkennis nodig?"
-  answer: "Nee, voorkennis is niet noodzakelijk! We bieden ook begeleiding voor beginners en kunnen je helpen bij het kiezen van het juiste instrument."
+- question: "Wat voor muziek spelen jullie?"
+  answer: "Van klassieke stukken tot film muziek en wereld muziek. Onze dirigent componeert ook speciaal voor ons!"
 
-- question: "Wat kost het lidmaatschap?"
-  answer: "Het contributiegeld is betaalbaar en wordt gebruikt voor noten, instrumenten en activiteiten. Neem contact met ons op voor actuele tarieven."
+- question: "Kan ik eerst proberen?"
+  answer: "Jazeker! Je krijgt twee gratis proeflessen om te ervaren hoe gezellig het bij ons is."
 
-- question: "Kan ik een proefles doen?"
-  answer: "Ja, absoluut! Neem contact met ons op om een proefles te plannen. Zo kun je ervaren hoe het is om in ons orkest te spelen."
-
-- question: "Welke muziek spelen jullie?"
-  answer: "We spelen een gevarieerd repertoire: van klassieke muziek tot filmpjes en popsongs. Onze dirigent zorgt ervoor dat voor iedereen iets leuks te vinden is."
-
-- question: "Zijn er optredens?"
-  answer: "Ja! We treden regelmatig op bij concerten, festivals en andere evenementen in Voorburg en omstreken. Het is altijd gezellig en er is meestal publiek bij!"
+- question: "Wat gebeurt er in de pauze?"
+  answer: "We spelen spelletjes zoals Weerwolven, Hitster en meer! Het is een gezellige manier om elkaar beter te leren kennen."
