--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -7,18 +7,18 @@
 # 3. Click "New" to add a new photo
 # 4. Upload the image and add caption/location
 
-- image: "imgs/placeholder-concert.jpg"
-  caption: "Ons laatste winterconcert in de Voorhof"
-  location: "Concertzaal De Voorhof"
+- image: "imgs/franse-kerk-concert.jpg"
+  caption: "Optreden in de Franse Kerk"
+  location: "Franse Kerk, Voorburg"
 
-- image: "imgs/placeholder-rehearsal.jpg"
-  caption: "Een gezellige repetitie woensdagavond"
-  location: "Muziekschool Voorburg"
+- image: "imgs/library-concert.jpg"
+  caption: "Muzikaal verhaal in de bibliotheek"
+  location: "Bibliotheek"
 
-- image: "imgs/placeholder-instruments.jpg"
-  caption: "Onze instrumenten klaar voor gebruik"
-  location: "Muziekschool Voorburg"
+- image: "imgs/park-concert.jpg"
+  caption: "Optreden in het park paviljoen"
+  location: "Park"
 
-- image: "imgs/placeholder-youth.jpg"
-  caption: "De enthousiaste leden van H.I.J. Jeugdorkest"
-  location: "Voorburg"
+- image: "imgs/floating-ponton-concert.jpg"
+  caption: "Uniek optreden op het water"
+  location: "Water"
