Update Content “content”

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -4,10 +4,10 @@ homepage_subtitle: Het gezelligste jeugdorkest van Voorburg en ver daarbuiten!
   plekken.
 cta_text: Lid Worden
 about_title: Over Ons
-about_text: >
-  Wij zijn meer dan alleen een orkest! Bij het H.I.J. staat gezelligheid voorop.
-  We repeteren in een ontspannen sfeer waar iedereen welkom is, ongeacht je
-  niveau.
+about_text: >-
+  Wij zijn meer dan alleen maar een orkest! Bij het H.I.J. staat gezelligheid
+  voorop. We repeteren in een ontspannen sfeer waar iedereen welkom is, ongeacht
+  je niveau.
 
 
   Ons orkest bestaat uit ~15 enthousiaste kinderen en jongeren tussen de 8 en 22 jaar. We hebben violen, cello's, contrabas, trompet en keyboard, maar we zijn altijd op zoek naar meer brass instrumenten, percussie en extra contrabassisten.
