Update Content “content”

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -22,6 +22,6 @@ facebook_url: https://www.facebook.com/HIJjeugdorkest/
 youtube_url: https://www.youtube.com/
 welcome_message: Welkom op onze website! Hier vind je alle informatie over ons jeugdorkest.
 join_title: Lid Worden
-join_text: Geef je op voor twee gratis proeflessen en ervaar zelf hoe gezellig
-  het bij het H.I.J. is!
+join_text: Geef je op voor een gratis proefles en ervaar zelf hoe gezellig het
+  bij het H.I.J. is!
 faq_intro: Hier vind je antwoorden op veelgestelde vragen over ons orkest.
