Update Content “content”

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -1,4 +1,4 @@
-homepage_title: SPEEL MEE BIJ HET H.I.J.!
+homepage_title: SPEEL MEE BIJ ONS H.I.J.!
 homepage_subtitle: Het gezelligste jeugdorkest van Voorburg en heel ver
   daarbuiten! Muziek maken, nieuwe vrienden maken en optreden op de meest
   verrassende plekken.
