Update Content “content”

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -1,5 +1,5 @@
 homepage_title: SPEEL MEE BIJ H.I.J.!
-homepage_subtitle: Het gezelligste jeugdorkest van Voorburg en heel ver
+homepage_subtitle: Het gezelligste jeugdorkest van Voorburg... en heel ver
   daarbuiten! Muziek maken, nieuwe vrienden maken en optreden op de meest
   verrassende plekken.
 cta_text: Lid Worden
