--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -4,8 +4,8 @@ events:
     title: Optreden in de Franse Kerk
     time: 10:00 - 10:45
     location: Franse Kerkstraat 24, Voorburg
-    description: Onderdeel van het altijd gezellige Huygens Festival. Gratis
-      toegang, wel graag aanmelden!
+    description: Onderdeel van het altijd meer dan gezellige Huygens Festival.
+      Gratis toegang, wel graag aanmelden!
     link: mailto:info@hijjeugdorkest.nl
   - day: "04"
     month: OKT
