Update Event “agenda”

--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -4,7 +4,7 @@ events:
     title: Optreden in de Franse Kerk
     time: 10:00 - 10:45
     location: Franse Kerkstraat 24, Voorburg
-    description: Onderdeel van het altijd meer dan gezellige Huygens Festival.
+    description: Onderdeel van het zoals altijd meer dan gezellige Huygens Festival.
       Gratis toegang, wel graag aanmelden!
     link: mailto:info@hijjeugdorkest.nl
   - day: "04"
