Update FAQ Item “faq”

--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -1,7 +1,8 @@
 items:
   - question: Moet ik al goed kunnen spelen?
-    answer: Nee hoor! Als je een paar jaar speelervaring hebt en enthousiast bent,
-      ben je welkom. We leren allemaal van elkaar in een ontspannen sfeer.
+    answer: Nee hoor, dat niet! Als je een paar jaar speelervaring hebt en
+      enthousiast bent, ben je welkom. We leren allemaal van elkaar in een
+      ontspannen sfeer.
   - question: Wat kost lidmaatschap?
     answer: De jaarlijkse contributie is €250. Dit dekt de kosten voor het gebruik
       van de oefenruimte en materialen.
