Update FAQ Item “faq”

--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -16,5 +16,6 @@ items:
     answer: Jazeker! Je krijgt twee gratis proeflessen om te ervaren hoe gezellig
       het bij ons is.
   - question: Wat gebeurt er in de pauze?
-    answer: We spelen spelletjes zoals Weerwolven, Hitster en meer! Het is een
-      gezellige manier om elkaar beter te leren kennen.
+    answer: Soms gaan we de markt op om wat lekkers te halen. En we spelen
+      spelletjes zoals Weerwolven, Hitster en meer! Het is een gezellige manier
+      om elkaar beter te leren kennen.
