Update Event “agenda”

--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -12,7 +12,7 @@ events:
     title: Muzikaal Verhaal 'Tijger in de Trein'
     time: 11:00
     location: Bibliotheek Leidschenveen, Den Haag
-    description: Gratis toegang, reservering vereist
+    description: Gratis toegang, wel even reserveren svp
     link: mailto:info@hijjeugdorkest.nl
   - day: "11"
     month: OKT
