--- a/_data/content.yml
+++ b/_data/content.yml
@@ -1,7 +1,6 @@
 homepage_title: SPEEL MEE BIJ H.I.J.!
-homepage_subtitle: Het gezelligste jeugdorkest van Voorburg... en heel ver
-  daarbuiten! Muziek maken, nieuwe vrienden maken en optreden op de meest
-  verrassende plekken.
+homepage_subtitle: Het gezelligste jeugdorkest van Voorburg en ver daarbuiten!
+  Muziek maken, nieuwe vrienden maken en optreden op verrassende plekken.
 cta_text: Lid Worden
 about_title: Over Ons
 about_text: >
