Update Event “agenda”

--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -16,8 +16,8 @@ events:
     link: mailto:info@hijjeugdorkest.nl
   - day: "11"
     month: OKT
-    title: Muzikaal Verhaal 'Tijger in de Trein'
+    title: Een muzikaal Verhaal over 'Tijger in de Trein'
     time: 11:00
     location: Bibliotheek Rijswijk
-    description: Gratis toegang, reservering vereist
+    description: Gratis toegang, wel graag reserveren
     link: mailto:info@hijjeugdorkest.nl
