Update Content “content”

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -1,5 +1,5 @@
 homepage_title: SPEEL MEE BIJ HET H.I.J.!
-homepage_subtitle: Het gezelligste jeugdorkest van Voorburg en heel ver
+homepage_subtitle: Het gezelligste jeugdorkest van Voorburg en ver, ver
   daarbuiten! Samen muziek maken, nieuwe vrienden leren kennen en optreden op
   verrassende plekken.
 cta_text: Lid Worden
