Update FAQ Item “faq”

--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -1,20 +1,19 @@
-# FAQ Items
-# Veelgestelde vragen over H.I.J. Jeugdorkest
-
-faq1_question: "Moet ik al goed kunnen spelen?"
-faq1_answer: "Nee! Als je een paar jaar speelervaring hebt en enthousiast bent, ben je welkom. We leren allemaal van elkaar in een ontspannen sfeer."
-
-faq2_question: "Wat kost lidmaatschap?"
-faq2_answer: "De jaarlijkse contributie is €250. Dit dekt de kosten voor het gebruik van de oefenruimte en materialen."
-
-faq3_question: "Kan ik mijn eigen instrument meenemen?"
-faq3_answer: "Ja, we verwachten dat je je eigen instrument en muziekstandaard meeneemt. Dit zorgt voor meer muziekplezier!"
-
-faq4_question: "Wat voor muziek spelen jullie?"
-faq4_answer: "Van klassieke stukken tot film muziek en wereld muziek. Onze dirigent componeert ook speciaal voor ons!"
-
-faq5_question: "Kan ik eerst proberen?"
-faq5_answer: "Jazeker! Je krijgt twee gratis proeflessen om te ervaren hoe gezellig het bij ons is."
-
-faq6_question: "Wat gebeurt er in de pauze?"
-faq6_answer: "We spelen spelletjes zoals Weerwolven, Hitster en meer! Het is een gezellige manier om elkaar beter te leren kennen."
+faq1_question: Moet ik al goed kunnen spelen?
+faq1_answer: Nee hoor! Als je een paar jaar speelervaring hebt en enthousiast
+  bent, ben je welkom. We leren allemaal van elkaar in een ontspannen sfeer.
+faq2_question: Wat kost lidmaatschap?
+faq2_answer: De jaarlijkse contributie is €250. Dit dekt de kosten voor het
+  gebruik van de oefenruimte, onze dirigent en bijvoorbeeld bladmuziek.
+faq3_question: Kan ik mijn eigen instrument meenemen?
+faq3_answer: Ja, we verwachten dat je je eigen instrument en muziekstandaard
+  meeneemt. Dit zorgt voor meer muziekplezier!
+faq4_question: Wat voor muziek spelen jullie?
+faq4_answer: Van klassieke stukken tot film muziek en wereld muziek. Onze
+  dirigent componeert ook speciaal voor ons!
+faq5_question: Kan ik eerst proberen?
+faq5_answer: Jazeker! Je krijgt twee gratis proeflessen om te ervaren hoe
+  gezellig het bij ons is.
+faq6_question: Wat gebeurt er in de pauze?
+faq6_answer: Soms gaan we de markt op voor wat lekkers. En we spelen spelletjes
+  zoals Weerwolven, Hitster en meer! Het is een gezellige manier om elkaar beter
+  te leren kennen.
