--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -13,7 +13,10 @@ faq4_answer: Van klassieke stukken tot film muziek en wereld muziek. Onze
 faq5_question: Kan ik eerst proberen?
 faq5_answer: Jazeker! Je krijgt twee gratis proeflessen om te ervaren hoe
   gezellig het bij ons is.
-faq6_question: Wat gebeurt er in de pauze?
+faq6_question: Wat doen jullie in de pauze?
 faq6_answer: Soms gaan we de markt op voor wat lekkers. En we spelen spelletjes
   zoals Weerwolven, Hitster en meer! Het is een gezellige manier om elkaar beter
   te leren kennen.
+faq7_question: Hoe oud moet je zijn om mee te kunnen spelen?
+faq7_answer: Je kunt van je 8e tot ongeveer je 20e bij ons terecht. En we zijn
+  blij als je langer blijft!
