Update FAQ Item “faq”

--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -17,6 +17,5 @@ faq6_question: Wat doen jullie in de pauze?
 faq6_answer: Soms gaan we de markt op voor wat lekkers. En we spelen spelletjes
   zoals Weerwolven, Hitster en meer! Het is een gezellige manier om elkaar beter
   te leren kennen.
-faq7_question: Hoe oud moet je zijn om mee te kunnen spelen?
-faq7_answer: Je kunt van je 8e tot ongeveer je 20e bij ons terecht. En we zijn
-  blij als je langer blijft!
+faq7_question: ""
+faq7_answer: ""
